[package]
name = "rust-api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = "1"
log = "0.4"
env_logger = "0.11"
sled = "1.0.0-alpha.121"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"